# vs_project

./: README.md
MyObject/: MyObject.cpp  MyObject.sln  MyObject.vcxproj  MyObject.vcxproj.filters
MyObject/MyObject/x64/Debug/: MyObject.exe.recipe  MyObject.ilk  vc143.idb
MyObject/MyObject/x64/Debug/MyObject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MyObject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
PBOC3.0demo/: PBOC3.0demo.cpp  PBOC3.0demo.sln  PBOC3.0demo.vcxproj  PBOC3.0demo.vcxproj.filters  README.md  format.cpp  head.h  parser.cpp  tag_init.cpp  tlv_parser.cpp  tools.cpp
PBOC3.0demo/PBOC3.0demo/x64/Debug/: PBOC3.0demo.exe.recipe  PBOC3.0demo.ilk  vc143.idb
PBOC3.0demo/PBOC3.0demo/x64/Debug/PBOC3.0demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PBOC3.0demo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
PCSCdemo/: CMakeLists.txt  PCSCdemo.c  PCSCdemo.h  README.md  connection.c  establish.c  handle.c  list.c  send.c  tools.c
algorithm/: aes_gcm.c  algorithm.sln  algorithm.vcxproj  algorithm.vcxproj.filters  main.c  rsa_sign.c  sha256.c  type.h
algorithm/algorithm/x64/Debug/: algorithm.exe.recipe  algorithm.ilk  vc143.idb
algorithm/algorithm/x64/Debug/algorithm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  algorithm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
